<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:swipe="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@android:dimen/notification_large_icon_height"
    android:orientation="vertical">

    <com.mahesh.realm.androidrealmdatabase.swipe.SwipeLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/view1"
        swipe:leftEdgeSwipeOffset="0dp"
        swipe:rightEdgeSwipeOffset="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_close" />

            <ImageView
                android:id="@+id/iv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_delete" />

            <ImageView
                android:id="@+id/iv_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toLeftOf="@+id/iv_delete"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_edit" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:padding="8dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/txt_name" />

            <ImageView
                android:id="@+id/iv_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_more" />

            <TextView
                android:id="@+id/tv_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/txt_age" />

            <TextView
                android:id="@+id/tv_designation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tv_name"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toLeftOf="@+id/iv_more"
                android:layout_toRightOf="@+id/tv_age"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/txt_designation" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/txt_location"
                android:textSize="12sp" />

        </RelativeLayout>

    </com.mahesh.realm.androidrealmdatabase.swipe.SwipeLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/darker_gray" />
</RelativeLayout>